--- a/index.html
+++ b/index.html
@@ -9,4 +9,4 @@ Bom Dia
 //agora,   vamos fazer, desta forma, quebrando o que estou escrevendo
 
 <h3>que isso Erick</h3>
-//tudo bem, deixa isso quieto, sem ajuda para,
+//tudo bem, deixa isso quieto, sem ajuda para a nao hunmana
